[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Plant.gd" type="Script" id=1]
[ext_resource path="res://Assets/Soil.tres" type="Material" id=2]

[sub_resource type="SphereMesh" id=1]
radius = 0.5
height = 0.5
is_hemisphere = true

[sub_resource type="CapsuleShape" id=2]
radius = 1.05745
height = 0.281513

[node name="Area" type="Area"]
script = ExtResource( 1 )

[node name="Soil" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Soil"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.390582, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="Soil"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.42158 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="Soil"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.498086, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="MeshInstance4" type="MeshInstance" parent="Soil"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0508537, 0, -0.335302 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="GrowthTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="WaterTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Current_Stage" type="Node" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="GrowthTimer" to="." method="_on_GrowthTimer_timeout"]
[connection signal="timeout" from="WaterTimer" to="." method="_on_WaterTimer_timeout"]
